# py_desktop_tools

./: .gitignore  .qmlls.ini  AGENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
.tmp/codex-plugin-retention-test/: command_index.db
design-system/desktop-tools/: MASTER.md
docs/: README.zh-CN.md  architecture-complexity-adjustment-plan.zh-CN.md  coordinator-redesign-execution-plan.zh-CN.md  database-storage-refactor-plan.zh-CN.md  macos-support-standalone-build-plan.zh-CN.md  platform-api-utools-inspired-plan.zh-CN.md  plugin-development.zh-CN.md  plugin-session-retention-design.zh-CN.md  project-design.zh-CN.md  pyqt-qml-newbie-guide.zh-CN.md  pyqt-remediation-plan.zh-CN.md  quick-launch-plugin-plan.zh-CN.md  refactor-implementation-notes.zh-CN.md  tool-plugin-macos-redesign-plan.md  utools-like-architecture.md  utools-like-architecture.zh-CN.md
docs/pyside6-qml-tutorial/: 04-signal-slot.zh-CN.md  06-mvvm-architecture.zh-CN.md  08-plugin-system-1.zh-CN.md  15-component-splitting.zh-CN.md  README.zh-CN.md
src/app/: Main.qml  __init__.py  app_bootstrap.py  app_context.py  app_relauncher.py  app_runtime.py  app_view_model.py  application_controller.py  build.py  hotkey_coordinator.py  launcher_runtime_coordinator.py  main.py  paths.py  plugin_surface_coordinator.py  qta_icon_provider.py  runtime_memory.py
src/app/commands/: __init__.py  context.py  (+4 more)
src/features/: __init__.py
tests/: test_app_indexing.py  test_core_architecture.py
tools/: build_macos.sh  build_windows.ps1  py_desktop_tools.spec  suishou.spec
(+299 files in other folders)
