[project]
name = "py-desktop-tools"
version = "1.0.0"
description = "桌面工具箱 - 图片压缩、JSON解析、API测试、下载工具、扫码工具等"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "qtawesome>=1.3.1",
    "qrcode>=7.4.2",
    "Pillow>=10.0.0",
    "pyperclip>=1.8.2",
    "requests>=2.31.0",
    "websocket-client>=1.8.0",
    "pyside6-addons>=6.11.0",
    "PyYAML>=6.0.2",
    "opencv-python>=4.10.0",
    "pypinyin>=0.50.0",
    "pylnk3>=0.4.2; sys_platform == 'win32'",
    "pynput>=1.7.7; sys_platform == 'darwin'",
]

[dependency-groups]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
app = "app.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools.packages.find]
where = ["src"]
